{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 23,
  "lineage": "8f37e831-515b-dd4a-8482-29438986570a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instancia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f3caa1cf4417e51b",
            "arn": "arn:aws:ec2:us-east-1:428129068949:instance/i-0f4a6bb47d0a46aa5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f4a6bb47d0a46aa5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00f3f3befe3dba772",
            "private_dns": "ip-10-0-2-40.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d2c067d1e9d6a11c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-068a8b26e23ff81fa"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02aba7092ea11a076",
            "tags": {
              "Name": "instancia-ec2"
            },
            "tags_all": {
              "Name": "instancia-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-068a8b26e23ff81fa"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_principal",
            "aws_subnet.private",
            "aws_vpc.principal",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428129068949:internet-gateway/igw-08acd41e5b1eb4014",
            "id": "igw-08acd41e5b1eb4014",
            "owner_id": "428129068949",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0b2cadaa0b30f0b5d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428129068949:route-table/rtb-06454a91f43d16992",
            "id": "rtb-06454a91f43d16992",
            "owner_id": "428129068949",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08acd41e5b1eb4014",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-publica"
            },
            "tags_all": {
              "Name": "rtb-publica"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2cadaa0b30f0b5d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ddb1784d5c67bff",
            "route_table_id": "rtb-06454a91f43d16992",
            "subnet_id": "subnet-0615fe53f7ffbd362"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_principal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428129068949:security-group/sg-068a8b26e23ff81fa",
            "description": "Security group principal",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068a8b26e23ff81fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_principal",
            "name_prefix": "",
            "owner_id": "428129068949",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_principal"
            },
            "tags_all": {
              "Name": "sg_principal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2cadaa0b30f0b5d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428129068949:subnet/subnet-02aba7092ea11a076",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02aba7092ea11a076",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "428129068949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-privada"
            },
            "tags_all": {
              "Name": "subnet-privada"
            },
            "vpc_id": "vpc-0b2cadaa0b30f0b5d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428129068949:subnet/subnet-0615fe53f7ffbd362",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0615fe53f7ffbd362",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "428129068949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-publica"
            },
            "tags_all": {
              "Name": "subnet-publica"
            },
            "vpc_id": "vpc-0b2cadaa0b30f0b5d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "principal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428129068949:vpc/vpc-0b2cadaa0b30f0b5d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0435d6bc9c86b52b7",
            "default_route_table_id": "rtb-0eddebf0c9e205cec",
            "default_security_group_id": "sg-0ec15e77d6cf0af86",
            "dhcp_options_id": "dopt-0a89c0d67e10cc022",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b2cadaa0b30f0b5d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eddebf0c9e205cec",
            "owner_id": "428129068949",
            "tags": {
              "Name": "vpc-principal"
            },
            "tags_all": {
              "Name": "vpc-principal"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}